--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Directory of Student Pages</h1>
 
 <ul>
-  <li><%= link_to 'username', username_path %></li>
+  <li><%= link_to 'widowvision', widowvision_path %></li>
 </ul>
